--- a/lesson-4/package.json
+++ b/lesson-4/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lesson-3",
+  "name": "lesson-4",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,15 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "uuid": "^11.0.3",
-    "vue": "^3.5.12",
-    "vue3-toastify": "^0.2.4"
+    "vue": "^3.5.12"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.14",
     "vite": "^5.4.10"
   }
 }
